// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating component rendering it should render according to theme: Rating Custom Theme 1`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-5"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-6"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-7"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-8"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-9"
      />
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 1`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-5"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-6"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-7"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-8"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-3 NatDSIcon-root-4 NatDSIcon-root-9"
      />
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 2`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-10 NatDSIcon-root-4 NatDSIcon-root-11"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-10 NatDSIcon-root-4 NatDSIcon-root-12"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-10 NatDSIcon-root-4 NatDSIcon-root-13"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-10 NatDSIcon-root-4 NatDSIcon-root-14"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-10 NatDSIcon-root-4 NatDSIcon-root-15"
      />
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 3`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-16 NatDSIcon-root-4 NatDSIcon-root-17"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-16 NatDSIcon-root-4 NatDSIcon-root-18"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-16 NatDSIcon-root-4 NatDSIcon-root-19"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-16 NatDSIcon-root-4 NatDSIcon-root-20"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-16 NatDSIcon-root-4 NatDSIcon-root-21"
      />
    </span>
  </span>
</span>
`;

exports[`Rating component rendering it should render each size: Rating Sizes 4`] = `
<span
  aria-label="null Stars"
  className="MuiRating-root MuiRating-readOnly"
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  role="img"
>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-22 NatDSIcon-root-4 NatDSIcon-root-23"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-22 NatDSIcon-root-4 NatDSIcon-root-24"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-22 NatDSIcon-root-4 NatDSIcon-root-25"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-22 NatDSIcon-root-4 NatDSIcon-root-26"
      />
    </span>
  </span>
  <span>
    <span
      className="MuiRating-icon MuiRating-iconEmpty NatDSRating-iconEmpty-2"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-rating NatDSRating-root-1 NatDSRating-root-22 NatDSIcon-root-4 NatDSIcon-root-27"
      />
    </span>
  </span>
</span>
`;
